--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/registrar-informacion-adicional/registrar-informacion-adicional.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/registrar-informacion-adicional/registrar-informacion-adicional.component.html
@@ -74,10 +74,10 @@
                 <p>
                   <b>Valor del aportante:</b>
                   <!-- obra -->
-                  <span *ngIf="tipoSolicitudCodigo==='1'">{{ aportante.valorObra | currency }}</span>
+                  <span *ngIf="tipoSolicitudCodigo === '1'">{{ aportante.valorObra | currency }}</span>
 
                   <!-- interventoria -->
-                  <span *ngIf="tipoSolicitudCodigo==='2'">{{ aportante.valorInterventoria | currency }}</span>
+                  <span *ngIf="tipoSolicitudCodigo === '2'">{{ aportante.valorInterventoria | currency }}</span>
                 </p>
               </div>
             </div>
@@ -132,10 +132,10 @@
               <img
                 class="icon-incompleto--img"
                 src="assets/img/icon/incompleto.svg"
-                              alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                alt="este campo es requerido"
+                [matTooltipPosition]="'above'"
+                matTooltip="Debe ingresar la información en el campo para continuar"
+                matTooltipClass="info-tooltip"
                 *ngIf="
                   (addressForm.get('plazoMeses').invalid && addressForm.get('plazoMeses').touched) ||
                   (addressForm.get('plazoMeses').invalid && estaEditando)
@@ -189,10 +189,10 @@
               <img
                 class="icon-incompleto--img"
                 src="assets/img/icon/incompleto.svg"
-                              alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+                alt="este campo es requerido"
+                [matTooltipPosition]="'above'"
+                matTooltip="Debe ingresar la información en el campo para continuar"
+                matTooltipClass="info-tooltip"
                 *ngIf="
                   (addressForm.get('plazoDias').invalid && addressForm.get('plazoDias').touched) ||
                   (addressForm.get('plazoDias').invalid && estaEditando)
@@ -203,39 +203,49 @@
         </div>
       </div>
     </div>
-    <div class="d-flex align-items-center" style="margin: auto; width: 85%">
+    <div class="d-flex mt-2em align-items-center">
       <div
-        class="text-area-quill quill-sin-borde"
+        class="text-area-quill"
         [class.color-secondaryColor]="
           (addressForm.get('objeto').invalid && addressForm.get('objeto').touched) ||
           (addressForm.get('objeto').invalid && estaEditando)
         "
       >
-        <label for="objeto" class="text-area-quill--label title-objeto">Objeto</label>
+        <label
+          for="objeto"
+          class="text-area-quill--label align-left-label"
+          [class.colorMainColor]="
+            !(
+              (addressForm.get('objeto').invalid && addressForm.get('objeto').touched) ||
+              (addressForm.get('objeto').invalid && estaEditando)
+            )
+          "
+        >
+          Objeto
+        </label>
         <quill-editor
-          class="quill-editor-style card"
+          class="quill-editor-style ml-1em"
           [styles]="editorStyle"
           [modules]="config"
           (onContentChanged)="maxLength($event, 1000)"
           formControlName="objeto"
+          #obsGestionSst
           required
-        ></quill-editor>
+        >
+        </quill-editor>
       </div>
-      <span class="contador miles" *ngIf="addressForm.get('objeto').value !== null">
-        {{
-          1000 -
-            (textoLimpio(addressForm.get('objeto').value) > 1000 ? 1000 : textoLimpio(addressForm.get('objeto').value))
-        }}
+      <span class="contador miles" *ngIf="addressForm.get('objeto').value">
+        {{ 1000 - textoLimpio(obsGestionSst.quillEditor, 1000) }}
       </span>
-      <span class="contador miles" *ngIf="addressForm.get('objeto').value === null"> 1000 </span>
+      <span class="contador miles" *ngIf="!addressForm.get('objeto').value"> 1000 </span>
       <span class="icon-incompleto">
         <img
           class="icon-incompleto--img"
           src="assets/img/icon/incompleto.svg"
-                        alt="este campo es requerido"
-              [matTooltipPosition]="'above'"
-              matTooltip="Debe ingresar la información en el campo para continuar"
-              matTooltipClass="info-tooltip"
+          alt="este campo es requerido"
+          [matTooltipPosition]="'above'"
+          matTooltip="Debe ingresar la información en el campo para continuar"
+          matTooltipClass="info-tooltip"
           *ngIf="
             (addressForm.get('objeto').invalid && addressForm.get('objeto').touched) ||
             (addressForm.get('objeto').invalid && estaEditando)
@@ -250,8 +260,8 @@
     </div>
   </form>
   <app-tabla-observaciones
-                          [DisponibilidadPresupuestal]="objetoDisponibilidad"
-                          *ngIf="objetoDisponibilidad && objetoDisponibilidad.estadoSolicitudCodigo === '2'"
-        >
+    [DisponibilidadPresupuestal]="objetoDisponibilidad"
+    *ngIf="objetoDisponibilidad && objetoDisponibilidad.estadoSolicitudCodigo === '2'"
+  >
   </app-tabla-observaciones>
 </div>
