--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actuacion-controv-contrc/components/actualizar-tramite-racc/actualizar-tramite-racc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actuacion-controv-contrc/components/actualizar-tramite-racc/actualizar-tramite-racc.component.html
@@ -48,7 +48,7 @@
             </ng-container>
             <ng-container matColumnDef="numeroActuacion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de actuación </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.seguimientoActuacionDerivadaId }}
+                <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroActuacionDerivada }}
                 </td>
             </ng-container>
             <ng-container matColumnDef="estadoRegistro">
