--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actuacion-controv-contrc/components/actualizar-tramite-racc/actualizar-tramite-racc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actuacion-controv-contrc/components/actualizar-tramite-racc/actualizar-tramite-racc.component.html
@@ -5,7 +5,7 @@
         </a>
     </div>
     <h1 class="title-menu--h1">
-        Actualizar trámite solicitud {{actuacion?.numeroActuacionFormat}}
+        Actualizar trámite solicitud {{actuacion?.controversiaContractual.numeroSolicitud}}
     </h1>
     <mat-card class="shipping-card var-main-gris">
         <mat-card-content align="left">
@@ -13,10 +13,7 @@
             <p><strong>Número del contrato: </strong><em>{{actuacion?.numeroContrato}}</em></p>
             <p><strong>Tipo de Controversia: </strong><em>{{actuacion?.tipoControversia}}</em></p>
             <p><strong>Fecha de la actuación adelantada: </strong><em>{{actuacion?.fechaActuacion | date: 'dd/MM/yyyy'}}</em></p>
-            <p><strong>Actuación adelantada: </strong></p>
-            <em>
-                <div [innerHtml]="actuacion?.actuacionAdelantadaOtro"></div>
-            </em>
+            <p><strong>Actuación adelantada: </strong> <em>{{actuacion?.actuacionAdelantadaOtro}}</em></p>
         </mat-card-content>
     </mat-card>
     <div class="tabs--actions">
@@ -48,7 +45,8 @@
             </ng-container>
             <ng-container matColumnDef="numeroActuacion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de actuación </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroActuacionDerivada }}
+                <td mat-cell *matCellDef="let element" align="center">
+                     {{ element.numeroActuacionDerivada }}
                 </td>
             </ng-container>
             <ng-container matColumnDef="estadoRegistro">
@@ -69,9 +67,9 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 20%;"> Gestión </th>
                 <td mat-cell *matCellDef="let element" align="center">
                     <button mat-raised-button color="accent" class="btn-table"
-                        *ngIf="element.esCompleto && element.estadoActuacionString=='Cumplida'"
+                        *ngIf="element.esCompleto && element.estadoActuacionString=='Cumplida' "
                         (click)="this.finalizarActuacionDerivada(element.seguimientoActuacionDerivadaId)">
-                        Finalizar actuación
+                        Finalizar actuación derivada
                     </button>
                     <button mat-raised-button color="accent" class="btn-table"
                         *ngIf="element.estadoActuacionString!='Finalizada'"
