--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-monitoreo-compromisos/tabla-monitoreo-compromisos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-monitoreo-compromisos/tabla-monitoreo-compromisos.component.html
@@ -13,7 +13,7 @@
 
     <ng-container matColumnDef="fechaOrdenDia">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de comité </th>
-      <td mat-cell *matCellDef="let element"> <b>{{element.fechaOrdenDia  | date: 'dd/MM/yyyy'}}</b> </td>
+      <td mat-cell *matCellDef="let element"> <b>{{element.fechaOrdenDia}}</b> </td>
     </ng-container>
 
     <ng-container matColumnDef="numero">
