bugs fase 1 cuarto ciclo :package:

--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/observacion-dialog/observacion-dialog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/observacion-dialog/observacion-dialog.component.html
@@ -28,7 +28,7 @@
       <ng-container matColumnDef="observacion">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Observación </th>
         <td mat-cell *matCellDef="let element" align="center">
-          <section [innerHTML]="element.observacion"></section>
+          <section [innerHTML]="element.observacion" class="h-modal scroll"></section>
         </td>
       </ng-container>
 
