--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/ver-detalle-editar-acta-ini-f-i-prc/ver-detalle-editar-acta-ini-f-i-prc.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/ver-detalle-editar-acta-ini-f-i-prc/ver-detalle-editar-acta-ini-f-i-prc.component.scss
@@ -141,3 +141,18 @@
 {
   padding-left: 0px;
 }
+
+.text-area-quill .quill-editor-style[required]::after {
+  top: calc(50% + 1.7em);
+}
+
+.img-size {
+  width: 1.9em;
+  height: 1.9em;
+  margin-right: 1em;
+  margin-bottom: .5em;
+}
+
+.auxMarg{
+  margin-top: 10%;
+}
