--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-preconstruccion/components/form-perfil/form-perfil.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-preconstruccion/components/form-perfil/form-perfil.component.html
@@ -305,7 +305,7 @@
                       (perfil.get('fechaAprobacion').invalid && estaEditando)
                     "
                   >
-                    Fecha de aprobación de la totalidad de las hojas de vida
+                    <b>Fecha de aprobación de la totalidad de las hojas de vida</b>
                   </label>
                 </div>
                 <div class="col d-flex">
