--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-preconstruccion/components/expansion-inter-validar-requisitos/expansion-inter-validar-requisitos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-preconstruccion/components/expansion-inter-validar-requisitos/expansion-inter-validar-requisitos.component.html
@@ -127,9 +127,9 @@
             </div>
           </div>
           <div class="d-flex align-items-center" *ngIf="perfil['tieneObservaciones'] === true">
-            <div class="text-area-quill">
-              <label for="alcanceParticular" class="text-area-quill--label size-label colorMainColor">
-                Observaciones a las hojas de vida del contratista de obra
+            <div class="text-area-quill" [class.color-secondaryColor]="perfil['verificarObservacion'] === null">
+              <label for="alcanceParticular" class="text-area-quill--label size-label" [class.colorMainColor]="perfil['verificarObservacion'] !== null">
+                Observaciones a las hojas de vida del contratista de interventoria
               </label>
               <quill-editor
                 class="quill-editor-style miles"
@@ -156,7 +156,7 @@
                 [matTooltipPosition]="'above'"
                 matTooltip="Debe ingresar la información en el campo para continuar"
                 matTooltipClass="info-tooltip"
-                *ngIf="!perfil['verificarObservacion'] && estaEditando"
+                *ngIf="!perfil['verificarObservacion']"
               />
             </span>
           </div>
