--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-preconstruccion/components/tabla-contrato-de-obra/tabla-contrato-de-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-preconstruccion/components/tabla-contrato-de-obra/tabla-contrato-de-obra.component.html
@@ -12,7 +12,7 @@
 
     <ng-container matColumnDef="fechaAprobacion">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de verificación de requisitos </th>
-        <td mat-cell *matCellDef="let element"> <b>{{element.fechaAprobacion | date: 'dd/MM/yyyy'}}</b> </td>
+        <td mat-cell *matCellDef="let element"> <b>{{element.fechaAprobacion}}</b> </td>
     </ng-container>
 
     <ng-container matColumnDef="numeroContrato">
