--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/tabla-gestion-compromisos/tabla-gestion-compromisos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/tabla-gestion-compromisos/tabla-gestion-compromisos.component.html
@@ -13,7 +13,7 @@
 
     <ng-container matColumnDef="fechaComite">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de comité </th>
-      <td mat-cell *matCellDef="let element" align="center"> {{ element.fechaComite | date: 'dd/MM/yyyy' }} </td>
+      <td mat-cell *matCellDef="let element" align="center"> {{ element.fechaComite }} </td>
     </ng-container>
 
     <ng-container *ngFor="let columna of ELEMENT_DATA" [matColumnDef]="columna.name">
