--- a/asivamosffie.web/asivamosffie/src/app/_pages/fase-preconstruccion/components/tabla-registrar-requisitos/tabla-registrar-requisitos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/fase-preconstruccion/components/tabla-registrar-requisitos/tabla-registrar-requisitos.component.html
@@ -34,7 +34,7 @@
 
         <ng-container matColumnDef="fechaAprobacion">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de aprobación de póliza </th>
-            <td mat-cell *matCellDef="let element"> <b>{{element.fechaAprobacion | date: 'dd/MM/yyyy' }}</b> </td>
+            <td mat-cell *matCellDef="let element"> <b>{{element.fechaAprobacion }}</b> </td>
         </ng-container>
 
         <ng-container matColumnDef="numeroContrato">
@@ -88,7 +88,7 @@
                     color="accent"
                     class="btn-table"
                     (click)="aprobarInicio( element.contratoId )"
-                    *ngIf="estadosPreconstruccion !== undefined && element.estadoCodigo === estadosPreconstruccion.enProcesoAprobacionReqTecnicos.codigo && element.registroCompleto === true">
+                    *ngIf="estadosPreconstruccion !== undefined && element.estadoCodigo === estadosPreconstruccion.enProcesoAprobacionReqTecnicos.codigo && element.registroCompleto === true && element.tieneObservacionSupervisor === false">
                     Aprobar inicio
                 </a>
                 <a  [routerLink]="['verDetalle', element.contratoId]"
