--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/tabla-actas-de-inicio-de-interventoria/tabla-actas-de-inicio-de-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/tabla-actas-de-inicio-de-interventoria/tabla-actas-de-inicio-de-interventoria.component.html
@@ -13,7 +13,7 @@
 
             <ng-container matColumnDef="fechaAprobacionRequisitos">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-25"> Fecha de aprobación de requisitos</th>
-                <td mat-cell *matCellDef="let element"> <b>{{element.fechaAprobacionRequisitosDate | date:'dd/MM/yyyy'}}</b></td>
+                <td mat-cell *matCellDef="let element"> <b>{{element.fechaAprobacionRequisitosDate}}</b></td>
             </ng-container>
 
             <ng-container matColumnDef="numeroContratoObra">
@@ -31,37 +31,62 @@
                 <td mat-cell *matCellDef="let element">
                     <button mat-raised-button color="accent" class="btn-table"
                         (click)="this.cargarActaSuscrita(element.contratoId, element.tipoContratoNombre, element.numeroContratoObra)"
-                        *ngIf="element.estadoActa=='Con acta en proceso de firma'"> Cargar acta suscrita</button>
-                        <!--
+                        *ngIf="element.estadoActaCodigo === listaEstadoActaCodigo.conActaGenerada"> Cargar acta suscrita</button>
                     <button mat-raised-button color="accent" class="btn-table"
-                        (click)="this.descargarActaDesdeTabla(element.contratoId)"
-                        *ngIf="element.estadoActa=='Con acta en proceso de firma'"> Descargar acta preliminar </button>
+                        (click)="this.descargarActaDesdeTabla(element.contratoId, element.numeroContratoObra)"
+                        *ngIf="element.estadoActaCodigo === listaEstadoActaCodigo.conActaGenerada"> Descargar acta preliminar </button>
+                    <button mat-raised-button
+                            color="accent"
+                            class="btn-table"
+                            *ngIf="element.estadoActaCodigo === listaEstadoActaCodigo.conActaPreliminarGenerada"
+                            (click)="this.enviarActaParaFirma(element.contratoId, element.numeroContratoObra)">
+                            Enviar acta para firma
+                    </button>
+                    <button mat-raised-button
+                            color="accent"
+                            class="btn-table"
+                            *ngIf="element.estadoActa=='Con acta preliminar generada' && element.estadoActaCodigo=='8'"
+                            (click)="this.enviarInterventorBtn(element.contratoId)">
+                            Enviar al interventor
+                    </button>
+                    <button mat-raised-button
+                            color="accent"
+                            class="btn-table"
+                            *ngIf="element.estadoActa=='Enviada por el supervisor'"
+                            (click)="this.cambiarEstadoInterventor(element.contratoId,element.tieneObservacionesSupervisor)">
+                            Enviar al interventor
+                    </button>
+                    <button mat-raised-button
+                            color="accent"
+                            class="btn-table"
+                            *ngIf="element.estadoActaCodigo === listaEstadoActaCodigo.conActaPreliminarGenerada"
+                            (click)="this.verDetalleEditar(element.contratoId)">
+                            Ver detalle/Editar
+                    </button>
+                    <!--
+                        Se comenta boton sobrante
+                        <button mat-raised-button
+                                color="accent"
+                                class="btn-table"
+                                *ngIf="element.estadoActaCodigo === '3'"
+                                (click)="this.verDetalle(element.contratoId)">
+                            Ver detalle
+                        </button>
                     -->
-                    <button mat-raised-button color="accent" class="btn-table"
-                        *ngIf="element.estadoActaCodigo=='2'"
-                        (click)="this.enviarActaParaFirma(element.contratoId,element.numeroContratoObra)">Enviar acta para firma</button>
-                   <button mat-raised-button color="accent" class="btn-table"
-                        *ngIf="element.estadoActa=='Con acta preliminar generada' && element.estadoActaCodigo=='8'"
-                        (click)="this.enviarInterventorBtn(element.contratoId)">Enviar al interventor</button>
-                    <button mat-raised-button color="accent" class="btn-table"
-                        *ngIf="element.estadoActa=='Enviada por el supervisor'"
-                        (click)="this.cambiarEstadoInterventor(element.contratoId,element.tieneObservacionesSupervisor)">Enviar
-                        al interventor</button>
-                    <button mat-raised-button color="accent" class="btn-table"
-                        *ngIf="element.estadoActa=='Con acta generada' || element.estadoActa=='Con acta preliminar generada'"
-                        (click)="this.verDetalleEditar(element.contratoId)">Ver detalle/Editar</button>
-                    <button mat-raised-button color="accent" class="btn-table"
-                        *ngIf="element.estadoActaCodigo=='3'"
-                        (click)="this.verDetalle(element.contratoId)">Ver detalle</button>
-                        <button mat-raised-button color="accent" class="btn-table"
-                    (click)="this.verDetalleActaCargada(element.contratoId)"
-                        *ngIf="element.estadoActaCodigo=='4'">
-                        Ver detalle</button>
-                    <button mat-raised-button color="accent" class="btn-table"
-                        *ngIf="element.estadoActaCodigo=='1'"
-                        (click)="this.validarActaParaInicio(element.contratoId)">Generar acta</button>
-
-
+                    <button mat-raised-button
+                            color="accent"
+                            class="btn-table"
+                            (click)="this.verDetalleActaCargada(element.contratoId)"
+                            *ngIf="element.estadoActaCodigo === listaEstadoActaCodigo.conActaSuscritaCargada || element.estadoActaCodigo === listaEstadoActaCodigo.conActaGenerada">
+                        Ver detalle
+                    </button>
+                    <button mat-raised-button
+                            color="accent"
+                            class="btn-table"
+                            *ngIf="element.estadoActaCodigo === listaEstadoActaCodigo.sinActaGenerada || element.estadoActaCodigo === listaEstadoActaCodigo.sinRevision"
+                            (click)="this.validarActaParaInicio(element.contratoId)">
+                            Generar acta
+                    </button>
                 </td>
             </ng-container>
 
