--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/tabla-generar-f-i-prc/tabla-generar-f-i-prc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/tabla-generar-f-i-prc/tabla-generar-f-i-prc.component.html
@@ -14,7 +14,7 @@
             <ng-container matColumnDef="fechaAprobacionRequisitos">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-25"> Fecha de aprobación de requisitos por el
                     supervisor </th>
-                <td mat-cell *matCellDef="let element"> <b>{{element.fechaAprobacionRequisitosDate | date:'dd/MM/yyyy'}}</b></td>
+                <td mat-cell *matCellDef="let element"> <b>{{element.fechaAprobacionRequisitosDate}}</b></td>
             </ng-container>
 
             <ng-container matColumnDef="numeroContratoObra">
@@ -47,12 +47,11 @@
                     *ngIf="element.estadoActa=='Sin acta generada'">Generar acta</button>
                     <button mat-raised-button color="accent" class="btn-table"
                         (click)="this.verDetalleEditarActaFDos(element.contratoId,element.tipoContratoNombre)"
-                        *ngIf="(element.tipoContratoNombre=='Obra' && element.estadoActaCodigo=='14' ) || 
-                         (element.estadoActa=='Con acta preliminar generada' && element.estadoActaCodigo=='2') "> Ver detalle /
+                        *ngIf="(element.tipoContratoNombre=='Obra' && element.estadoActaCodigo=='14' ) || ( element.tipoContratoNombre=='Obra' && element.estadoActaCodigo=='17' ) || (element.estadoActa=='Con acta preliminar generada' && element.estadoActaCodigo=='2') "> Ver detalle /
                         Editar</button>
                     <button mat-raised-button color="accent" class="btn-table"
                         (click)="this.verDetalleActaFDos(element.contratoId)"
-                        *ngIf="element.estadoActa=='Con acta en proceso de firma' || ( element.tipoContratoNombre=='Obra' && element.estadoActaCodigo=='17' ) || element.estadoActa=='Enviada por el supervisor' || element.estadoActa=='Con validación del supervisor' || element.estadoActa=='Con acta generada' || element.estadoActa=='Con validacion del supervisor' || (element.estadoActa=='Con acta preliminar generada' && element.estadoActaCodigo=='3') || (element.estadoActa=='Con acta preliminar generada' && element.estadoActaCodigo=='8')  || (element.estadoActa=='Con acta preliminar generada' && (element.estadoActaCodigo=='15'|| element.estadoActaCodigo=='16' || element.estadoActaCodigo=='21'))">
+                        *ngIf="element.estadoActa=='Con acta en proceso de firma' || element.estadoActa=='Enviada por el supervisor' || element.estadoActa=='Con validación del supervisor' || element.estadoActa=='Con acta generada' || element.estadoActa=='Con validacion del supervisor' || (element.estadoActa=='Con acta preliminar generada' && element.estadoActaCodigo=='3') || (element.estadoActa=='Con acta preliminar generada' && element.estadoActaCodigo=='8')  || (element.estadoActa=='Con acta preliminar generada' && (element.estadoActaCodigo=='15'|| element.estadoActaCodigo=='16' || element.estadoActaCodigo=='21'))">
                         Ver detalle</button>
                     <button mat-raised-button color="accent" class="btn-table"
                         (click)="this.verDetalleActaCargada(element.contratoId)"
