--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/tabla-solicitudes-sin-tramitar/tabla-solicitudes-sin-tramitar.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/tabla-solicitudes-sin-tramitar/tabla-solicitudes-sin-tramitar.component.html
@@ -13,7 +13,7 @@
 
     <ng-container matColumnDef="fechaSolicitud">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de la solicitud </th>
-      <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaSolicitud | date: 'dd/MM/yyyy' }}</b> </td>
+      <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaSolicitud }}</b> </td>
     </ng-container>
 
     <ng-container matColumnDef="numeroSolicitud">
