--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/table-solicitud-contratacion/table-solicitud-contratacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/table-solicitud-contratacion/table-solicitud-contratacion.component.html
@@ -13,7 +13,7 @@
 
       <ng-container matColumnDef="fecha">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de la solicitud </th>
-        <td mat-cell *matCellDef="let element"> <b>{{element.fechaCreacion | date: ' dd/MM/yyyy '}}</b> </td>
+        <td mat-cell *matCellDef="let element"> <b>{{element.fechaCreacion}}</b> </td>
       </ng-container>
 
       <ng-container matColumnDef="numero">
