--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-preconstruccion/components/tabla-contrato-de-interventoria/tabla-contrato-de-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-preconstruccion/components/tabla-contrato-de-interventoria/tabla-contrato-de-interventoria.component.html
@@ -12,7 +12,7 @@
 
     <ng-container matColumnDef="fechaAprobacion">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de aprobación de póliza </th>
-        <td mat-cell *matCellDef="let element"> <b>{{element.fechaAprobacion | date: 'dd/MM/yyyy' }}</b> </td>
+        <td mat-cell *matCellDef="let element"> <b>{{element.fechaAprobacion }}</b> </td>
     </ng-container>
 
     <ng-container matColumnDef="numeroContrato">
@@ -39,11 +39,13 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la verificación </th>
         <td mat-cell *matCellDef="let element">
             <section    *ngIf=" element.estadoCodigo !== estadosPreconstruccionInterventoria.sinAprobacionReqTecnicos.codigo 
-                                && element.estadoCodigo !== estadosPreconstruccionInterventoria.enviadoAlApoyo.codigo"> 
+                                && element.estadoCodigo !== estadosPreconstruccionInterventoria.enviadoAlApoyo.codigo
+                                && element.estadoCodigo !== estadosPreconstruccionInterventoria.enviadoAlSupervisor.codigo"> 
                         {{ element.estadoNombre }}
             </section>
             <section *ngIf="element.estadoCodigo === estadosPreconstruccionInterventoria.sinAprobacionReqTecnicos.codigo"> {{ estadosPreconstruccionInterventoria.sinAprobacionReqTecnicos.nombre }} </section>
             <section *ngIf="element.estadoCodigo === estadosPreconstruccionInterventoria.enviadoAlApoyo.codigo"> {{ estadosPreconstruccionInterventoria.enviadoAlApoyo.nombre }} </section>
+            <section *ngIf="element.estadoCodigo === estadosPreconstruccionInterventoria.enviadoAlSupervisor.codigo"> {{ estadosPreconstruccionInterventoria.enviadoAlSupervisor.nombre }} </section>
         </td>
     </ng-container>
 
@@ -80,7 +82,7 @@
                 mat-raised-button
                 color="accent"
                 class="btn-table"
-                *ngIf="estadosPreconstruccionInterventoria !== undefined && element.estadoCodigo === estadosPreconstruccionInterventoria.conReqTecnicosVerificados.codigo">
+                *ngIf="estadosPreconstruccionInterventoria !== undefined && element.estadoCodigo === estadosPreconstruccionInterventoria.conReqTecnicosVerificados.codigo && element.tieneObservacionSupervisor === false && element.registroCompleto === true">
                 Enviar al supervisor
             </a>
         </td>
