--- a/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/tabla-requisitos-tecnicos/tabla-requisitos-tecnicos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/requisitos-tecnicos-construccion/components/tabla-requisitos-tecnicos/tabla-requisitos-tecnicos.component.html
@@ -12,7 +12,7 @@
   <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
     <ng-container matColumnDef="fechaAprobacion">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de aprobación de póliza </th>
-      <td mat-cell *matCellDef="let element" align="center"> <b> {{ element.fechaAprobacion | date: 'dd/MM/yyyy' }} </b> </td>
+      <td mat-cell *matCellDef="let element" align="center"> <b> {{ element.fechaAprobacion }} </b> </td>
     </ng-container>
 
     <ng-container matColumnDef="numeroContrato">
